--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,5 @@ updates:
   - dependency-name: com.google.guava:guava
   - dependency-name: org.slf4j:slf4j-api
   - dependency-name: org.jruby:jruby-complete
+  - dependency-name: org.apache.maven.plugins/maven-install-plugin
+
