--- a/features/pom.xml
+++ b/features/pom.xml
@@ -54,14 +54,14 @@
                                 <descriptor>mvn:org.apache.karaf.features/framework/${karaf-version}/xml/features</descriptor>
                                 <descriptor>mvn:org.apache.karaf.features/standard/${karaf-version}/xml/features</descriptor>
                                 <descriptor>mvn:org.apache.cxf.karaf/apache-cxf/${cxf-version}/xml/features</descriptor>s
-                                <descriptor>mvn:hu.blackbelt.karaf.features/google-features/${google-karaf-features-version}/xml/features</descriptor>
-                                <descriptor>mvn:hu.blackbelt.karaf.features/antlr-features/${antlr-karaf-features-version}/xml/features</descriptor>
-                                <descriptor>mvn:hu.blackbelt.karaf.features/bouncycastle-features/${bouncycastle-karaf-features-version}/xml/features</descriptor>
-                                <descriptor>mvn:hu.blackbelt.karaf.features/apache-commons-features/${apache-commons-karaf-features-version}/xml/features</descriptor>
-                                <descriptor>mvn:hu.blackbelt.karaf.features/apache-httpclient-features/${apache-httpclient-karaf-features-version}/xml/features</descriptor>
-                                <descriptor>mvn:hu.blackbelt.karaf.features/apache-poi-features/${apache-poi-karaf-features-version}/xml/features</descriptor>
-                                <descriptor>mvn:hu.blackbelt.karaf.features/eclipse-emf-features/${eclipse-emf-karaf-features-version}/xml/features</descriptor>
-                                <descriptor>mvn:hu.blackbelt.karaf.features/eclipse-epsilon-features/${eclipse-epsilon-karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/google-features/${karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/antlr-features/${karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/bouncycastle-features/${karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/apache-commons-features/${karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/apache-httpclient-features/${karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/apache-poi-features/${karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/eclipse-emf-features/${karaf-features-version}/xml/features</descriptor>
+                                <descriptor>mvn:hu.blackbelt.karaf.features/eclipse-epsilon-features/${karaf-features-version}/xml/features</descriptor>
                                 <descriptor>file:${project.build.directory}/feature/feature.xml</descriptor>
                             </descriptors>
                             <distribution>org.apache.karaf.features:framework</distribution>
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>hu.blackbelt.karaf.features</groupId>
             <artifactId>google-features</artifactId>
-            <version>${google-karaf-features-version}</version>
+            <version>${karaf-features-version}</version>
             <classifier>features</classifier>
             <type>xml</type>
             <scope>runtime</scope>
@@ -127,7 +127,7 @@
         <dependency>
             <groupId>hu.blackbelt.karaf.features</groupId>
             <artifactId>bouncycastle-features</artifactId>
-            <version>${bouncycastle-karaf-features-version}</version>
+            <version>${karaf-features-version}</version>
             <classifier>features</classifier>
             <type>xml</type>
             <scope>runtime</scope>
@@ -136,7 +136,7 @@
         <dependency>
             <groupId>hu.blackbelt.karaf.features</groupId>
             <artifactId>apache-commons-features</artifactId>
-            <version>${apache-commons-karaf-features-version}</version>
+            <version>${karaf-features-version}</version>
             <classifier>features</classifier>
             <type>xml</type>
             <scope>runtime</scope>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>hu.blackbelt.karaf.features</groupId>
             <artifactId>apache-poi-features</artifactId>
-            <version>${apache-poi-karaf-features-version}</version>
+            <version>${karaf-features-version}</version>
             <classifier>features</classifier>
             <type>xml</type>
             <scope>runtime</scope>
@@ -154,7 +154,7 @@
         <dependency>
             <groupId>hu.blackbelt.karaf.features</groupId>
             <artifactId>eclipse-emf-features</artifactId>
-            <version>${eclipse-emf-karaf-features-version}</version>
+            <version>${karaf-features-version}</version>
             <classifier>features</classifier>
             <type>xml</type>
             <scope>runtime</scope>
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>hu.blackbelt.karaf.features</groupId>
             <artifactId>antlr-features</artifactId>
-            <version>${antlr-karaf-features-version}</version>
+            <version>${karaf-features-version}</version>
             <classifier>features</classifier>
             <type>xml</type>
             <scope>runtime</scope>
