--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <karaf-version>4.4.1</karaf-version>
         <cxf-version>3.3.1</cxf-version>
 
-        <osgi-utils-version>1.1.0</osgi-utils-version>
+        <osgi-utils-version>1.1.1.20230131_040731_bda34657_develop</osgi-utils-version>
         <karaf-features-version>2.0.1</karaf-features-version>
 
         <!--suppress UnresolvedMavenProperty -->
