--- a/.github/workflows/build-dependabot.yml
+++ b/.github/workflows/build-dependabot.yml
@@ -1,4 +1,4 @@
-name: Build project for Dependabot
+name: Build project
 
 on:
   pull_request_target:
@@ -19,25 +19,25 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 2
 
       - name: 🛠️ Project context
         id: context
-        uses: zero88/gh-project-context@v1.1
+        uses: zero88/gh-project-context@v1.2
 
-      - name: 🛠️ Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: 🛠️ Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'zulu'
 
       - name: 🧹 Remove settings.xml
         run: rm $HOME/.m2/settings.xml || true
 
       - name: 🛠️ Setup maven settings.xml
-        uses: whelk-io/maven-settings-xml-action@v20
+        uses: whelk-io/maven-settings-xml-action@v21
         with:
           servers: >
             [
@@ -84,7 +84,7 @@ jobs:
           echo "Version from POM: ${POM_VERSION}"
           echo "Base version from POM: ${BASE_VERSION}"
           echo "Building version: ${VERSION_NUMBER}"
-          echo "::set-output name=version::${VERSION_NUMBER}"
+          echo "version=${VERSION_NUMBER}" >> $GITHUB_OUTPUT
 
 ##########################
 # MAVEN BUILD START
@@ -110,12 +110,12 @@ jobs:
           if [ "${{ job.status }}" == "canceled" ]; then
             message=":x: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"    
           fi
-          echo "::set-output name=message::${message}"
+          echo "message=${message}" >> $GITHUB_OUTPUT
 
       - name: 📢 Send message to discord
         uses: sarisia/actions-status-discord@v1
         if: always()
         with:
           webhook: ${{ secrets.JUDONG_DISCORD_WEBHOOK }}
-          title: "Gitub action"
+          title: "Github action"
           description: "${{ steps.message.outputs.message }}"
