--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,18 +22,18 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 2
-
-      - name: 🛠️ Project context
+        
+      - name: 🛠 Project context
         id: context
-        uses: zero88/gh-project-context@v1.1
+        uses: zero88/gh-project-context@v1.2
 
-      - name: 🛠️ Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: 🛠 Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'zulu'
 
       - name: 🔢 Get the current PR number
@@ -44,9 +44,9 @@ jobs:
 
       - name: 🧹 Remove settings.xml
         run: rm $HOME/.m2/settings.xml || true
-
+          
       - name: 🛠️ Setup maven settings.xml
-        uses: whelk-io/maven-settings-xml-action@v20
+        uses: whelk-io/maven-settings-xml-action@v21
         with:
           servers: >
             [
@@ -66,6 +66,7 @@ jobs:
                     "password": "${{ secrets.SONATYPE_PASSWORD }}"
                 }
             ]
+
           mirrors: >
             [
                 {
@@ -93,19 +94,33 @@ jobs:
           echo "Version from POM: ${POM_VERSION}"
           echo "Base version from POM: ${BASE_VERSION}"
           echo "Building version: ${VERSION_NUMBER}"
-          echo "::set-output name=version::${VERSION_NUMBER}"
+          echo "version=${VERSION_NUMBER}" >> $GITHUB_OUTPUT
 
 ##########################
 # MAVEN BUILD START
 ##########################
 
-      # Phase 1 - Build and deploy to judong nexus
-      - name: 🔥 Build with Maven (build, test)
+      - name: 🔥 Build Maven project with tests (HSQLDB)
         run: |-
           ./mvnw -B -Dstyle.color=always \
           -Drevision=${{ steps.version.outputs.version }} \
-          -Psign-artifacts \
-          -Prelease-judong \
+          -Ddialect=hsqldb \
+          clean install
+
+      - name: 🔥 Test with PostgreSQL
+        run: |-
+          ./mvnw -B -Dstyle.color=always \
+          -Drevision=${{ steps.version.outputs.version }} \
+          -Ddialect=postgresql \
+          surefire:test
+
+      - name: 🎁 Deploy with Maven to judong
+        run: |-
+          ./mvnw -B -Dstyle.color=always \
+          -Drevision=${{ steps.version.outputs.version }} \
+          -DdeployOnly \
+          -Dmaven.test.skip=true \
+          -P"sign-artifacts,release-judong" \
           deploy
 
       # Phase 2 - Build and deploy to maven central
@@ -134,7 +149,7 @@ jobs:
 ##########################
 
       - name: 📌 Create version tag
-        uses: actions/github-script@v5
+        uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.OSS_PAT }}
           script: |
@@ -150,7 +165,7 @@ jobs:
           ${{ always() && 
           (startsWith(github.head_ref, 'increment') || startsWith(github.head_ref, 'release')) && 
           job.status == 'success' }}
-        uses: actions/github-script@v5
+        uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.OSS_PAT }}
           script: |
@@ -198,12 +213,12 @@ jobs:
           if [ "${{ job.status }}" == "canceled" ]; then
             message=":x: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"    
           fi
-          echo "::set-output name=message::${message}"
+          echo "message=${message}" >> $GITHUB_OUTPUT
 
       - name: 📢 Send message to discord
         uses: sarisia/actions-status-discord@v1
         if: always()
         with:
           webhook: ${{ secrets.JUDONG_DISCORD_WEBHOOK }}
-          title: "Gitub action"
+          title: "Github action"
           description: "${{ steps.message.outputs.message }}"
