--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
         <karaf-version>4.4.1</karaf-version>
         <cxf-version>3.3.1</cxf-version>
 
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+
         <osgi-utils-version>1.1.1.20230309_124512_70d0e58d_develop</osgi-utils-version>
         <karaf-features-version>2.0.1</karaf-features-version>
 
@@ -114,10 +117,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
-                    <configuration>
-                        <source>11</source>
-                        <target>11</target>
-                    </configuration>
                 </plugin>
 
                 <!-- Override version for maven-install-plugin because there is a bug in
