--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
             org.osgi.framework;version="[1.8,2.0)",
             !lombok,
             javax.annotation;version="[1.0,2)",
-            org.slf4j;version="(1.6,3]",
+            org.slf4j;version="[1.6,3)",
         </osgi-default-import>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
