JNG-5144 Replace custom logger to Slf4J (#128)
[2023-08-26 21:44:50 +0200] Review issue fixed
[2023-08-26 20:46:25 +0200] Fixing range
[2023-08-25 13:29:26 +0200] Repackage epsilon runtime
[2023-08-24 20:29:27 +0200] Update slf4j version
[2023-08-23 19:54:32 +0200] JNG-5144 Replace logger to slf4j

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
         <osgi-default-import>
             org.osgi.framework;version="[1.8,2.0)",
             !lombok,
-            javax.annotation;version="[1.0,2)"
+            javax.annotation;version="[1.0,2)",
+            org.slf4j;version="[1.6,3)",
         </osgi-default-import>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,7 +96,7 @@
                     <configuration>
                         <instructions>
                             <Export-Package>
-                                hu.blackbelt.epsilon.runtime.*;version=${project.version}
+                                hu.blackbelt.epsilon.runtime.*;version="${project.version}"
                             </Export-Package>
                             <Import-Package>
                                 ${osgi-default-import},
@@ -671,6 +672,12 @@
             <dependency>
                 <groupId>hu.blackbelt.epsilon</groupId>
                 <artifactId>epsilon-runtime-utils</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>hu.blackbelt.epsilon</groupId>
+                <artifactId>epsilon-runtime-execution</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
